MOH logo size changed, back button position parallel to side dropdown, dropdown font-size, added note in trend and title overlapping with sidenav resolved

--- a/frontend/src/components/Dropdown/Dropdown.css
+++ b/frontend/src/components/Dropdown/Dropdown.css
@@ -65,6 +65,7 @@ span.ant-select-selection-item{
 
 
 .tg_button{
+  height: 1.7rem;
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 20px;
   background-color: #AF5907 !important;
@@ -72,6 +73,8 @@ span.ant-select-selection-item{
 }
 
 .tg_button_light{
+  font-size: 14px;
+
   background-color: #AF590780 !important;
   border-color: #AF590780 !important;
 }
